--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta <meta name="description" content"="free Kanban board demo site"
-    name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content"="free Kanban board demo site"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kanban Board Project</title>
   </head>
   <body>
