--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content"="free Kanban board demo site"/>
+    <meta name="description" content="free Kanban board demo site" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kanban Board Project</title>
   </head>
